Implemented security for FHIR facades. Implemented overview of FHIR Facades in FF console. Added lots of tests for ViscoLink. Improved handling for /metadata calls.